# act-aio

./: .dist.rules  .gitignore  LICENSE  MESSAGE.md  README.md  TODO.md  create-distribution.py  install.bat  main.py  menu_example.qml  pyproject.toml  settings.json  start.bat  test.bat
act_aio/: main.py  models.py  plugin_executor.py  plugin_io.py  plugin_manager.py  plugin_models.py  plugin_utils.py  qml_qrc.py  resources.qrc  text_formatter.py  tracking.py
act_aio/qml/: PluginListItem.qml  main.qml  main.qml.bak-copy
act_aio/qml/components/: CircularProgressBar.qml  CustomScrollBar.qml  MultiLangText.qml  SubMenuRootItem.qml
act_aio/qml/dialogs/: AboutDialog.qml  CommandDialog.qml  ConfirmationDialog.qml  ErrorDialog.qml  InfoDialog.qml  ManualDialog.qml  SettingsDialog.qml  SetupDialog.qml  UrlInputDialog.qml
installation/: install-python.ps1  install-uv.ps1  uv-installer.ps1
installation/mirror/: download-metadata.json
plugins/env-printer/: main.py  pyproject.toml
plugins/hello-world/: main.py  pyproject.toml
plugins/sample-plugin/: main.py  pyproject.toml
plugins/sample-plugin/manuals/: manual_ko.txt
plugins/sample-plugin/snippets/commands/: OpenDirectory.yaml  OpenUserDownloadDirectory.yaml
scripts/: build-win-msvc.bat  rcc-to-py.bat
