[project]
name = "act-aio"
version = "0.1.0"
description = "Actions All-In-One - Python Plugin Launcher"
title = "S-Pro"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "nuitka>=2.8.1",
    "posthog>=6.7.5",
    "py7zr>=1.0.0",
    "PySide6>=6.8.0",
    "pyyaml>=6.0.0",
    "tomli>=2.0.0; python_version<'3.11'",
]

[project.scripts]
act-aio = "act_aio.main:main"

[tool.uv.workspace]
members = [
    "plugins/pdf-image-inserter",
    "plugins/ljh-test-plugin",
    "plugins/env-printer",
    "plugins/my-plugin",
    "plugins/pdf-to",
    "plugins/plugin-name-test-abc-def-ghi-jkl-mno",
]
