[project]
name = "sample-plugin"
version = "1.0.0"
description = "A sample plugin to demonstrate the Actions All-In-One launcher"
tags = ["#Utility", "Automation", "Example"]
requires-python = ">=3.8"
dependencies = [
    "colorama>=0.4.0",
    "requests>=2.28.0",
]
# Custom execution command (optional)
# exec = "python custom_launcher.py"  # Simple cross-platform command
# exec = { win32 = "python main.py", posix = "./main.sh" }  # Platform-specific
